--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/codoc19?characterEncoding=utf8&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=swyUeBhuSa4AvTN4eiBiIOkQylPCFF
+server.servlet.context-path=/codoc19/api/
