--- a/.gitignore
+++ b/.gitignore
@@ -135,4 +135,4 @@ gradle-app.setting
 **/build/
 
 # End of https://www.gitignore.io/api/kotlin,intellij,gradle
-src/main/kotlin/com/teamxenox/codoc19/core/SecretConstants.kt
+SecretConstants.kt
