🆙 update/replace jackson with gson

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/codoc19?characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=swyUeBhuSa4AvTN4eiBiIOkQylPCFF
 server.servlet.context-path=/codoc19/api/
+spring.http.converters.preferred-json-mapper=gson
