--- a/bootzan/build.gradle
+++ b/bootzan/build.gradle
@@ -14,7 +14,9 @@ repositories {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    implementation "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.8"
+    // https://mvnrepository.com/artifact/com.google.code.gson/gson
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
