--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,5 @@ gradle-app.setting
 
 # End of https://www.gitignore.io/api/kotlin,intellij,gradle
 SecretConstants.kt
+
+src/main/resources/application.properties
