🚚 improve QA by updating to new deepset ask route

--- a/.gitignore
+++ b/.gitignore
@@ -145,3 +145,4 @@ covid19-api/src/main/resources/time_series_covid19_recovered_global.csv
 covid19-api/src/main/resources/time_series_covid19_deaths_global.csv
 covid19-api/src/main/resources/time_series_covid19_deaths_US.csv
 covid19-api/src/main/resources/time_series_covid19_confirmed_US.csv
+bot-script-config.json
